--- a/event.html
+++ b/event.html
@@ -59,18 +59,18 @@
         </div>
     </nav>
 
-    <div class="container">
+    <div class="container" style="margin-top:20px; margin-bottom:10px;">
         <div class="row">
             <div class="column-md-8 column-sm-12" style="margin:0 auto; margin-bottom: 10px;">
                 <div class="scroll column-md-8 column-sm-12" style="height:100%;">
-                        <div class="row">
-                                <div class="column-md-8 column-sm-12">
-                                    <div style="height:200px; overflow:hidden;">
-                                        <img src="http://images.performgroup.com/di/library/omnisport/d1/f8/lebronjames-cropped_i9ob0vabfhuc1jjospcm2a9f8.jpg?t=1593952276"
-                                            style="width:100%;">
-                                    </div>
-                                </div>
+                    <div class="row">
+                        <div class="column-md-8 column-sm-12">
+                            <div style="height:200px; overflow:hidden;">
+                                <img src="http://images.performgroup.com/di/library/omnisport/d1/f8/lebronjames-cropped_i9ob0vabfhuc1jjospcm2a9f8.jpg?t=1593952276"
+                                    style="width:100%;">
                             </div>
+                        </div>
+                    </div>
                     <div class="card">
                         <div class="card-body">
                             <div class="row justify-content-center">
@@ -144,38 +144,30 @@
                         <div class="card-body">
                             <div class="row">
                                 <strong class="pull-left primary-font">James</strong>
-                                <small class="pull-right text-muted">
+                                <small class="pull-right text-muted" style="padding-left:10px; padding-top:3px;">
                                     <span class="glyphicon glyphicon-time"></span>7 mins ago</small>
                                 </br>
-                                <p>Wow this looks like such a fun event. I can't wait to see Lebron play in LA, what a waste it was for him to play in Cleveland! I look forward to the food and entertainment!</p>
+                                <p>Wow this looks like such a fun event. I can't wait to see Lebron play in LA, what a waste
+                                    it was for him to play in Cleveland! I look forward to the food and entertainment!</p>
                             </div>
                         </div>
 
-                                <!-- <hr data-brackets-id="12673">
-                                <ul data-brackets-id="12674" id="sortable" class="list-unstyled ui-sortable">
-                                    <strong class="pull-left primary-font">James</strong>
-                                    <small class="pull-right text-muted">
-                                        <span class="glyphicon glyphicon-time"></span>7 mins ago</small>
-                                    </br>
-                                    <li class="ui-state-default">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-                                        ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-                                        ullamco laboris nisi ut aliquip ex ea commodo consequat. </li>
-                                    </br>
-                                    <strong class="pull-left primary-font">Taylor</strong>
-                                    <small class="pull-right text-muted">
-                                        <span class="glyphicon glyphicon-time"></span>14 mins ago</small>
-                                    </br>
-                                    <li class="ui-state-default">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
-                                        nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
-                                        officia deserunt mollit anim id est laborum.</li>
-
-                                </ul> -->
+                        <div class="card-body">
+                            <div class="row">
+                                <strong class="pull-left primary-font">Chris</strong>
+                                <small class="pull-right text-muted" style="padding-left:10px; padding-top: 3px;">
+                                    <span class="glyphicon glyphicon-time"></span>18 mins ago</small>
+                                </br>
+                                <p>I am so glad Lebron is in LA now. He simply does not belong in Cleveland! All that talent,
+                                    but so far away from any kind of championship culture or mentality? SHAME!</p>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
+    </div>
+    </div>
     </div>
 </body>
 
