fixed event page margins (non-react)

--- a/event.html
+++ b/event.html
@@ -22,8 +22,10 @@
         }
 
         div.scroll {
-            height: 500px;
+            height: 90vh;
             /* width: auto; */
+            padding: 20px;
+            margin: auto;
             overflow-y: scroll;
         }
 
@@ -59,18 +61,18 @@
         </div>
     </nav>
 
-    <div class="container" style="margin-top:20px; margin-bottom:10px;">
+    <div class="container">
         <div class="row">
-            <div class="column-md-8 column-sm-12" style="margin:0 auto; margin-bottom: 10px;">
-                <div class="scroll column-md-8 column-sm-12" style="height:100%;">
-                    <div class="row">
-                        <div class="column-md-8 column-sm-12">
+            <div class="scroll">
+                <!-- <div class="scroll column-md-8" style="height:100%;"> -->
+                    <!-- <div class="row"> -->
+                        <!-- <div class="column-md-8 column-sm-12"> -->
                             <div style="height:200px; overflow:hidden;">
                                 <img src="http://images.performgroup.com/di/library/omnisport/d1/f8/lebronjames-cropped_i9ob0vabfhuc1jjospcm2a9f8.jpg?t=1593952276"
                                     style="width:100%;">
                             </div>
-                        </div>
-                    </div>
+                        <!-- </div> -->
+                    <!-- </div> -->
                     <div class="card">
                         <div class="card-body">
                             <div class="row justify-content-center">
@@ -163,11 +165,9 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                <!-- </div> -->
             </div>
         </div>
-    </div>
-    </div>
     </div>
 </body>
 
